// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ListItem rendering renders expected elements 1`] = `
<span
  className="ListItem"
  data-testid="name"
  title="Test"
>
  Test
</span>
`;

exports[`ListItem rendering renders expected elements when optional properties are set 1`] = `
<span
  className="ListItem ListItem--unresolved TestClass"
  data-testid="name"
  title="Test"
>
  Test
</span>
`;
